--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 <body>
       <header>
           <div class="logo">
-              <div class="box"></div>
-              <h2>S</h2>
-              <h1>Svarga</h1>
+            <a href="#home">
+                <img src="assets/img/Home Button.png" class="home-logo" alt="home-logo">
+            </a>
+            <h1><a href="#home">Svarga</a></h1>
           </div>
           <nav>
               <ul>
-                  <li><a href="#">Tentang Kami</a></li>
+                  <li><a href="#tentang-kami">Tentang Kami</a></li>
                   <li><a href="#">Tentang Produk</a></li>
                   <li><a href="#">Bantuan</a></li>
                   <li><button class="button-login">Login</button></li>
@@ -24,25 +25,51 @@
           </nav>
       </header>
       <main>
-          <article>
+          <article id="home">
               <div class="container-home">
-                  <div class="caption">
-                      <h1>
-                          Jaminan Pemakaman <br> Untuk Orang Terkasih
-                      </h1>
-                      <p>
-                        Kematian menjadi suatu peristiwa yang menyedihkan dan penuh haru, namun pasti akan terjadi. <span>Svarga
-                        </span> hadir disisi anda untuk memberikan jaminan pemakaman yang aman dan nyaman baik dari segi pembiayaan maupun prosesi pemakaman.
-                      </p>
-                      <div class="pendaftaran">
-                          <button class="button-daftar">Daftar Sekarang</button>
-                          <p>Pelajari Selengkapnya</p>
-                      </div>
+                <div class="caption">
+                    <h1>
+                        Jaminan Pemakaman <br> Untuk Orang Terkasih
+                    </h1>
+                    <p>Kematian menjadi suatu peristiwa yang menyedihkan dan penuh haru, namun pasti akan terjadi. <span>Svarga</span> hadir disisi anda untuk memberikan jaminan pemakaman yang aman dan nyaman baik dari segi pembiayaan maupun prosesi pemakaman.
+                    </p>
+                    <div class="pendaftaran">
+                        <button class="button-daftar">Daftar Sekarang</button>
+                        <p>Pelajari Selengkapnya</p>
                     </div>
-                    <figure>
-                        <img src="assets/img/pexels-ketut-subiyanto-4473314.jpg" class="featured-img" alt="">
-                    </figure>
                 </div>
+                <figure>
+                    <img src="assets/img/sample home family.jpg" class="featured-img" alt="">
+                </figure>
+            </div>
+        </article>
+
+        <article id="tentang-kami">
+            <div class="container-tentang-kami">
+                <div class="container-elipse">
+                    <div class="elipse biru-pudar"></div>
+                    <div class="elipse biru-terang"></div>
+                    <div class="elipse biru-transparant"></div>
+                </div>
+                <div class="caption-tentang-kami">
+                    <div class="judul-caption">
+                        <h1>Tentang Kami</h1>
+                    </div>
+                    <div class="content-caption">
+                        <h2>Penyedia Jaminan Pemakaman</h2>
+                        <p>Kami hadir disisi Anda membantu mempersiapkan prosesi pemakaman orang terkasih. Terkadang biaya pemakaman sering menjadi beban yang tidak terpikirkan, sehingga untuk menghindari hal tersebut kami menawarkan layanan untuk Anda dan Keluarga.
+                        <br>
+                        <br>
+                        Tim kami akan bekerja sama dengan pihak-pihak profesional terkait urusan prosesi pemakaman maupun maintenance makam jangka panjang, sehingga anda dapat merasa lebih tenang.</p>
+                    </div>
+                </div>
+                <figure>
+                    <img src="assets/img/sample pic about us.jpg" class="featured-img-tentang-kami" alt="gambar-tentang-kami">
+                </figure>
+            </div>
+        </article>
+        <article>
+                    
         </article>
       </main>
 </body>
